--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
         <div class="text">
             <h3>Проект</h3>
-            <p>История о написании книги о развитии города Первоуральск. Посвященная дню рождению города.</p>
+            <p>Сторителлинг об истории города Первоуральск.</p>
         </div>
     </div>
     <div class="yakors">
