--- a/photos.html
+++ b/photos.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" href="/images/Citycons_building_icon-icons.com_67935.ico" type="image/x-icon">
     <title>Фотографии</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body onload="time()">
 
