--- a/photos.html
+++ b/photos.html
@@ -45,7 +45,7 @@
                 <div class="photo_items">
                      <div class="item">
                         <a data-fslightbox="gallery" href="images/playback-fm_colorize-photo_6490b6add87263eef9476e36d671179b.png">
-                            <img src="images/playback-fm_colorize-photo_6490b6add87263eef9476e36d671179b.png" alt, title="Главный корпус">
+                            <img class="img-adaptive" src="images/playback-fm_colorize-photo_6490b6add87263eef9476e36d671179b.png" alt, title="Главный корпус">
                         </a>
                     </div>
                     <div class="item">
@@ -95,7 +95,7 @@
                         </a>
                     </div>
                 </div>
-
+                <script src="js/fslightbox.js"></script>
             </div>
         </div>
     </div>
