THE LAST VERSION 3.0658265873 alpha beta
:Э

--- a/interactive.html
+++ b/interactive.html
@@ -25,7 +25,7 @@
     <div class="yakors">
         <li><a href="index.html#Главная">Главная</a></li>
         <li><a href="index.html#История">История</a></li>
-        <li><a href="index.html#Конец">Контакты</a></li>
+        <li><a href="index.html#Конец">Поделиться</a></li>
         <li><a href="photos.html">Фотографии</a></li>
         <li><a href="interactive.html">Интерактив</a></li>
     </div>
