--- a/photos.html
+++ b/photos.html
@@ -17,7 +17,7 @@
 <body onload="time()">
 
     <div class="block">
-        <a name="Начало"></a> 
+        <a name="Главная"></a> 
           <head>
               <h1>ГОРОД, КОТОРЫЙ ЖИВЕТ</h1> 
           </head> 
@@ -25,7 +25,7 @@
     <div class="yakors">
         <li><a href="index.html#Главная">Главная</a></li>
         <li><a href="index.html#История">История</a></li>
-        <li><a href="index.html#Конец">Контакты</a></li>
+        <li><a href="index.html#Конец">Поделиться</a></li>
         <li><a href="photos.html">Фотографии</a></li>
         <li><a href="interactive.html">Интерактив</a></li>
     </div>
@@ -92,6 +92,41 @@
                     <div class="item">
                         <a data-fslightbox="gallery" href="images/Поле с домом.png">
                             <img class="img-adaptive" src="images/Поле с домом.png" alt, title="Медицинский блок">
+                        </a>
+                    </div>
+                </div>
+
+                <div class="photo_items">
+                    <div class="item">
+                        <a data-fslightbox="gallery" href="images/Сцена с людьми.png">
+                            <img class="img-adaptive" src="images/Сцена с людьми.png" alt, title="Костровая">
+                        </a>
+                    </div>
+                    <div class="item">
+                        <a data-fslightbox="gallery" href="images/Стадион.png">
+                            <img class="img-adaptive" src="images/Стадион.png" alt, title="Проходная">
+                        </a>
+                    </div>
+                    <div class="item">
+                        <a data-fslightbox="gallery" href="images/паровоз.jpg">
+                            <img class="img-adaptive" src="images/паровоз.jpg" alt, title="Медицинский блок">
+                        </a>
+                    </div>
+                </div>
+                <div class="photo_items">
+                    <div class="item">
+                        <a data-fslightbox="gallery" href="images/Улочка перед прудом.png">
+                            <img class="img-adaptive" src="images/Улочка перед прудом.png" alt, title="Костровая">
+                        </a>
+                    </div>
+                    <div class="item">
+                        <a data-fslightbox="gallery" href="images/cтройка дороги.png">
+                            <img class="img-adaptive" src="images/cтройка дороги.png" alt, title="Проходная">
+                        </a>
+                    </div>
+                    <div class="item">
+                        <a data-fslightbox="gallery" href="images/playback-fm_colorize-photo_3b9935e32fddb2868c4a800ced125042.jpg">
+                            <img class="img-adaptive" src="images/playback-fm_colorize-photo_3b9935e32fddb2868c4a800ced125042.jpg" alt, title="Медицинский блок">
                         </a>
                     </div>
                 </div>
