--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="box">
                 <div class="box_in_box">
                     <img id="box_photo" src="images/babka2.png" height="110px">
-                     <p>Раньше по улицам ходить страшно было, в тёмное время суток одна мгла да темень, каждый шел ночью на свой страх и риск. <br>  <span>~Давыдова Анна Андреевна</span> </p>
+                     <p>"...Раньше по улицам ходить страшно было, в тёмное время суток одна мгла да темень, каждый шел ночью на свой страх и риск." <br>  <span>~Давыдова Анна Андреевна</span> </p>
                 </div>
             </div>
         </div>
@@ -58,7 +58,7 @@
             <div class="box">
                 <div class="box_in_box">
                     <img id="box_photo" src="images/ded2.png" height="110px">
-                     <p>В 80-ых было мало мест в городе, где можно было развлечься как молодёжи, так и старшим. А вот теперь полно их всяких развелось. <br>  <span>~Зайцев Анатолий Петрович</span></p>
+                     <p>"...В 80-ых было мало мест в городе, где можно было развлечься как молодёжи, так и старшим. А вот теперь полно их всяких развелось." <br>  <span>~Зайцев Анатолий Петрович</span></p>
                 </div>
             </div>
         </div>
