THE LAST OF THE LASTEST VERSION 3.29437 alpha beta
:(

--- a/photos.html
+++ b/photos.html
@@ -130,6 +130,57 @@
                         </a>
                     </div>
                 </div>
+                <div class="photo_items">
+                    <div class="item">
+                        <a data-fslightbox="gallery" href="images/Радуги.jpg">
+                            <img class="img-adaptive" src="images/Радуги.jpg" alt, title="Костровая">
+                        </a>
+                    </div>
+                    <div class="item">
+                        <a data-fslightbox="gallery" href="images/Колесо в парке.jpg">
+                            <img class="img-adaptive" src="images/Колесо в парке.jpg" alt, title="Проходная">
+                        </a>
+                    </div>
+                    <div class="item">
+                        <a data-fslightbox="gallery" href="images/МУЖЖЖИИИКИИИ.jpg">
+                            <img class="img-adaptive" src="images/МУЖЖЖИИИКИИИ.jpg" alt, title="Медицинский блок">
+                        </a>
+                    </div>
+                </div>
+                <div class="photo_items">
+                    <div class="item">
+                        <a data-fslightbox="gallery" href="images/Снимок экрана 2022-04-21 094414.png">
+                            <img class="img-adaptive" src="images/Снимок экрана 2022-04-21 094414.png" alt, title="Костровая">
+                        </a>
+                    </div>
+                    <div class="item">
+                        <a data-fslightbox="gallery" href="images/Копия Шайба.jpg">
+                            <img class="img-adaptive" src="images/Копия Шайба.jpg" alt, title="Проходная">
+                        </a>
+                    </div>
+                    <div class="item">
+                        <a data-fslightbox="gallery" href="images/Новенький фонтанчик.jpg">
+                            <img class="img-adaptive" src="images/Новенький фонтанчик.jpg" alt, title="Медицинский блок">
+                        </a>
+                    </div>
+                </div>
+                <div class="photo_items">
+                    <div class="item">
+                        <a data-fslightbox="gallery" href="images/Здания, красивое....jpg">
+                            <img class="img-adaptive" src="images/Здания, красивое....jpg" alt, title="Костровая">
+                        </a>
+                    </div>
+                    <div class="item">
+                        <a data-fslightbox="gallery" href="images/Снимок экрана 2022-04-21 093638.png">
+                            <img class="img-adaptive" src="images/Снимок экрана 2022-04-21 093638.png" alt, title="Проходная">
+                        </a>
+                    </div>
+                    <div class="item">
+                        <a data-fslightbox="gallery" href="images/Снимок экрана 2022-04-21 093748.png">
+                            <img class="img-adaptive" src="images/Снимок экрана 2022-04-21 093748.png" alt, title="Медицинский блок">
+                        </a>
+                    </div>
+                </div>
                 <script src="js/fslightbox.js"></script>
             </div>
         </div>
